SCSS fixes to cc-body-wrap

--- a/comiccontrol/cc.css
+++ b/comiccontrol/cc.css
@@ -66,6 +66,7 @@ html {
   width: 1230px;
   margin: auto;
   position: relative;
+  min-height: 100vh;
 }
 
 /* generic elements */
