--- a/comiccontrol/scss/layout/_base.scss
+++ b/comiccontrol/scss/layout/_base.scss
@@ -12,6 +12,7 @@ html{
 	width:$full-width;
 	margin:auto;
 	position:relative;
+	min-height:100vh;
 }
 
 /* generic elements */
